@@ -1,3 +1,10 @@
+*idea-community-13.0.1.133.331 (24 Dec 2013)
+
+  24 Dec 2013; Manuel Rüger <mrueg@gentoo.org>
+  +idea-community-13.0.1.133.331.ebuild, -idea-community-12.1.6.129.1359.ebuild,
+  -idea-community-13.0.0.133.193.ebuild:
+  [dev-util/idea-community] Version bump. Remove old.
+
 *idea-community-13.0.0.133.193 (11 Dec 2013)
 
   11 Dec 2013; Manuel Rüger <mrueg@gentoo.org>
